test/cases/x86_64-linux/hello_world_with_updates.1.zig
pub export fn _start() noreturn {}

// error
//
// :1:34: error: expected type 'noreturn', found 'void'
